--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -24,7 +24,7 @@
                     <a href="#ai-arbitrage" class="text-gray-700 hover:text-primary transition">IA Arbitraje</a>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="#demo" class="bg-primary text-white px-6 py-2 rounded-full hover:bg-primary/90 transition">
+                    <a href="https://trust-pay-7vyx.vercel.app/" target="_blank" class="bg-primary text-white px-6 py-2 rounded-full hover:bg-primary/90 transition">
                         Probar Demo
                     </a>
                 </div>
@@ -45,7 +45,7 @@
                         Olvídate de las altas comisiones de procesadores tradicionales.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="#demo" class="bg-white text-primary px-8 py-4 rounded-full font-semibold hover:bg-gray-100 transition text-center">
+                        <a href="https://trust-pay-7vyx.vercel.app/" target="_blank" class="bg-white text-primary px-8 py-4 rounded-full font-semibold hover:bg-gray-100 transition text-center">
                             Comenzar Ahora
                         </a>
                         <a href="#pricing" class="border-2 border-white px-8 py-4 rounded-full font-semibold hover:bg-white/10 transition text-center">
