--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -24,7 +24,7 @@
                     <a href="#ai-arbitrage" class="text-gray-700 hover:text-primary transition">IA Arbitraje</a>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="https://trust-pay-7vyx.vercel.app/" target="_blank" class="bg-primary text-white px-6 py-2 rounded-full hover:bg-primary/90 transition">
+                    <a href="https://trust-pay-7vyx.vercel.app/" target="_blank" class="bg-primary text-white px-6 py-2 rounded-full hover:bg-primary/90 transition btn-glow relative z-10">
                         Probar Demo
                     </a>
                 </div>
@@ -33,22 +33,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="pt-32 pb-20 gradient-bg text-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <section class="pt-32 pb-20 gradient-bg text-white relative">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="animate-fade-in">
                     <h1 class="text-5xl md:text-6xl font-bold mb-6 leading-tight">
-                        Reduce hasta <span class="text-yellow-300">99%</span> en Tarifas de Transacción
+                        Reduce hasta <span class="text-yellow-300 neon-glow">99%</span> en Tarifas de Transacción
                     </h1>
                     <p class="text-xl mb-8 text-gray-100">
                         Pagos seguros con blockchain, smart contracts de escrow y arbitraje con IA. 
                         Olvídate de las altas comisiones de procesadores tradicionales.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="https://trust-pay-7vyx.vercel.app/" target="_blank" class="bg-white text-primary px-8 py-4 rounded-full font-semibold hover:bg-gray-100 transition text-center">
-                            Comenzar Ahora
+                        <a href="https://trust-pay-7vyx.vercel.app/" target="_blank" class="bg-white text-primary px-8 py-4 rounded-full font-semibold hover:bg-gray-100 transition text-center btn-glow shadow-2xl hover:shadow-3xl transform hover:scale-105">
+                            <span class="relative z-10">Comenzar Ahora</span>
                         </a>
-                        <a href="#pricing" class="border-2 border-white px-8 py-4 rounded-full font-semibold hover:bg-white/10 transition text-center">
+                        <a href="#pricing" class="border-2 border-white px-8 py-4 rounded-full font-semibold hover:bg-white/10 transition text-center glass">
                             Ver Comparativa
                         </a>
                     </div>
@@ -67,8 +67,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="relative">
-                    <div class="bg-white/10 backdrop-blur-lg rounded-2xl p-8 border border-white/20">
+                <div class="relative float">
+                    <div class="glass rounded-2xl p-8 shadow-2xl">
                         <div class="text-center mb-6">
                             <h3 class="text-2xl font-bold mb-2">Ahorro Real por Transacción</h3>
                             <p class="text-gray-200">Ejemplo: Venta de curso de $100 USD</p>
@@ -109,5 +109,6 @@
     <!-- Load sections -->
     <script src="sections.js"></script>
     <script src="calculator.js"></script>
+    <script src="animations.js"></script>
 </body>
 </html>
