feat: adjust fee and comision

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -38,7 +38,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="animate-fade-in">
                     <h1 class="text-5xl md:text-6xl font-bold mb-6 leading-tight">
-                        Reduce hasta <span class="text-yellow-300 neon-glow">67%</span> en Tarifas de Transacción
+                        Reduce hasta <span class="text-yellow-300 neon-glow">65%</span> en Tarifas de Transacción
                     </h1>
                     <p class="text-xl mb-8 text-gray-100">
                         Pagos seguros con blockchain, smart contracts de escrow y arbitraje con IA. 
@@ -84,14 +84,14 @@
                             <div class="bg-green-500/20 border border-green-400/50 rounded-lg p-4">
                                 <div class="flex justify-between items-center">
                                     <span class="font-semibold">TrustPay (Starknet)</span>
-                                    <span class="text-2xl font-bold text-green-300">$1.05</span>
+                                    <span class="text-2xl font-bold text-green-300">$1.22</span>
                                 </div>
-                                <p class="text-sm text-gray-200 mt-1">~1% Gas + $0.05 red</p>
+                                <p class="text-sm text-gray-200 mt-1">1% servicio + $0.22 gas STRK</p>
                             </div>
                             <div class="bg-yellow-500/20 border border-yellow-400/50 rounded-lg p-4 text-center">
                                 <p class="text-sm text-gray-200">Ahorras</p>
-                                <p class="text-4xl font-bold text-yellow-300">$2.15</p>
-                                <p class="text-sm text-gray-200">67% de reducción</p>
+                                <p class="text-4xl font-bold text-yellow-300">$1.98</p>
+                                <p class="text-sm text-gray-200">62% de reducción</p>
                             </div>
                         </div>
                     </div>
